# ai-dubbing-pipeline-colab

./: .abacus.donotdelete  .env.example  .gitignore  LICENSE  README.md  canadian_glossary.yaml  dubbing_pipeline.py  pyproject.toml  requirements.txt  run_dub.sh  setup_colab.sh
docs/: ARCHITECTURE.md  SETUP.md  USAGE.md
examples/: README.md  canadian_glossary.txt  oqlf_glossary.txt
