[project]
name = "dubbing-pipeline"
version = "0.2.0"
description = "AI-powered video dubbing pipeline (WhisperX + XTTS-V2 voice cloning + Gemini) optimized for Google Colab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dubbing Pipeline Contributors" },
]
keywords = ["dubbing", "tts", "xtts", "whisperx", "gemini", "translation", "colab", "oqlf", "voice-cloning"]
dependencies = [
    "whisperx==3.8.6",
    "coqui-tts>=0.24.0",
    "google-genai==2.8.0",
    "python-dotenv==1.0.1",
    "pydub==0.25.1",
    "librosa>=0.10",
    "soundfile==0.13.1",
    "yt-dlp",
    "tqdm",
]

[project.scripts]
dubbing-pipeline = "dubbing_pipeline:main"

[project.urls]
Documentation = "./docs"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["dubbing_pipeline"]
